# streamit

./: README.md
streams/: Makefile  Makefile.in  README  README.source  build.xml  configure.in  knit  prj.el  strc  streams.cc
streams/apps/: README
streams/apps/applications/802.11a/: benchmark.xml
streams/apps/applications/DCT/: DCT.java  DCT.str  DCT2D.str  IDCT.str  IDCT2D.str
streams/apps/applications/FAT/: AdapBeam.java  CFAR.java  Comp.java  Comp.java~  CompDelay.java  CompDelay.java~  Complex.java  Complex.java~  ComplexIdentity.java  ComplexIdentity.java~  Cube.java  DopFilt.java  FIRComp.java  LQ.java  MatCub.java  MatTetr.java  PulsCmp.java  STAP.java  SubAnal.java  SubAnal.java~  Target.java  check.java
streams/apps/applications/FAT-new/: AdapBeam.str  ArrayFIR.str  BandProc.str  Block45.str  CFAR.str  CFAR_Vect.str  Comp_Rep.str  ComplexIdentity.str  DegenCub.str  DegenTetr.str  DopFilt.str  ElPipe.str  FAT-test.str  FAT-test.str~  FAT.str  FAT_test.str  FormChg20.str  FormChg21.str  FormChg21Real.str  GenCub.str  GenTetr.str  GetCube.str  GetVect.str  LQ.java  Makefile  PROBLEMS  PulsCmp.str  STAP.str  SubAnalysis.str  SubSynth.str  SunSynth.str  Target.str  WideBand.str  getCub.str  getMat.str
streams/apps/applications/GMTI/: ABsteeringMatrix.str  AdaptiveBeamform.str  Cfar.str  DFT.str  DataStruct.str  Detection.str  DopplerFilter.str  GMTI_Fragments.str  Makefile  Pulse.str  README  Stap.str  Tester.str  Tester_Intermediate_Results.str  WienerHopfSolution.str  benchmark.xml  lqHouse.str  matlabFunctions.str  qr.str  readme.txt
streams/apps/applications/crc/: CrcEncoderInput1  CrcEncoderTest.java
streams/apps/applications/hdtv/: Bitifier.java  ConvolutionalDeinterleaver.java  ConvolutionalInterleaver.java  DataReorder.java  DelayPipeline.java  HDTV.java  Makefile  NoiseSource.java  PreCoder.java  PreDecoder.java  ReedSolomonDecoder.java  ReedSolomonEncoder.java  SymbolMapper.java  SymbolUnMapper.java  Test.java  TrellisDecoder.java  TrellisDecoderPipeline.java  TrellisEncoder.java  TrellisEncoderPipeline.java  UnBitifier.java  UngerboeckDecoder.java  UngerboeckEncoder.java  hdtv_writeup.tex  hdtv_writeup_conv_interleaver.tex  hdtv_writeup_decoding_example.tex  hdtv_writeup_precode.tex  hdtv_writeup_rs.tex  hdtv_writeup_trellis.tex  hdtv_writeup_ungerboeck.tex  make_pdf_docs.pl  make_stream_graphs.pl  references.bib
streams/apps/applications/nokia-fine/: AdapTest.java  FirFilter.java  FloatIdentity.java  GenA.java  Linkeddcalc.java  Linkeddcalc.out  Makefile  NokiaFine.out  RowCol.java  backs.java  dcalc.java  forw.java  multvect.java
streams/apps/applications/nokia-new/: AdapTest.java  FloatIdentity.java  SelfProd.java  backs.java  dcalc.java  multvect.java
streams/apps/applications/raytracer-new/: README
streams/apps/graphics/: README.txt
streams/apps/hand/: README
streams/apps/laminarir/: README.md  compile-and-run.sh  logfile
streams/apps/libraries/: BandPassFilter.java  BandPassFilter.str  BeamFormer.java  BeamFormer.str  ComplexBeamFormer.java  ComplexBeamFormer.str  ComplexMultiDimFir.java  ComplexMultiDimFir.str  ComplexToMag.java  ComplexToMag.str  FirFilter.java  FirFilter.str  FloatFileReader.java  FloatFileTest.java  FloatFileWriter.java  FloatOneSource.java  FloatOneSource.str  FloatPrinter.str  FloatSeqSource.str  IirFilter.java.underconstruction  IntPrinter.str  IntSeqSource.str  LowPassFilter.java  LowPassFilter.str  floats5000  tenSampleSinewave  vMatMul.java  vMatMul.str  vRamp.java  vRamp.str
streams/apps/old/: README.txt
streams/apps/sorts/: README
streams/include/: basic_mod.bc  dot-bashrc  dot-bashrc-barebones  dot-cshrc  from_file.bc  from_file_dyn_raw.bc  from_file_raw.bc  gather_numbers.bc  magic_net.bc  output.bc  raw_streaming_gdn.h  sd_numbers.bc  to_file.bc  to_file_numbers.bc  work_est.bc
streams/include/atlas/: Makefile  atlas-interface.c  atlas-test.c
streams/include/tex/: listings.sty  simplemargins.sty  streamit.sty
streams/misc/: Makefile.docs  Makefile.std  Makefile.vars  ac_java_macros.m4  benchall.xsl  bin2dat.pl  build-bench-doc  build-bench-xml.py  build-javadoc  check-javadoc-errors  concat_cluster_threads_cpp.pl  dat2bin.pl  get-antlr  htmlformat.pl  make-dot-in.pl  makefile.deps.perl  release.sh  streamit-mail-unowned.pl  vectorization.h
streams/misc/c/: file2raw.cpp
streams/misc/compression/: Makefile  README.txt  aa2pam  aa2raw.c  avi2aa  avi2pam  pam2aa  pam2avi  pam2ppm  pam2raw.c  raw2pam.c
streams/misc/raw/: Makefile  Makefile.rawdist
streams/misc/scripts/: FileWriterToPrintln.perl  NumericArraySummary.perl  emacs-indent.sh  hwprof.sh  preprocess.perl  streamitdoc  turnOffPrints.pl
streams/regtest/: Makefile  README  control  regtest_manual.txt  streamit-regtest.py  testlib.py
streams/regtest/qmtest/: build-qmtest.py  classes.qmc  delete_old_regtests  examine-results.py  pbs_regtest_nightly  regtest.xml  rt-results  rt-results.py  run-reg-tests.py  run_a_regtest  setup.txt  status_files.xsl  status_summary.pl  status_summary.xsl  streamit.py  streamitqm  summarize_xml_results  testsys.tex
streams/regtest/streamittest/: CompilerHarness.java  CompilerInterface.java  Harness.java  ResultPrinter.java  RuntimeHarness.java  StreamITTestCase.java  TestAll.java  TestApps.java  TestBed.java  TestBenchmarks.java  TestCheckin.java  TestCheckinRaw.java  TestExamples.java  TestFieldInit.java  TestFieldProp.java  TestLinear.java  TestNightly.java  TestOnce.java  TestOnlyApps.java  TestOnlyBenchmarks.java  TestOnlyExamples.java  TestOnlySorts.java  TestOnlyTests.java  TestPartition.java  TestPldi03Benchmarks.java  TestSorts.java  TestTemplate.java  TestTests.java
streams/regtest/tools/: RegtestItem  apps_directory.sh  asplos.results  compare_abs.pl  compare_output.pl  compare_raw.pl  compare_uni.pl  comparelib.pl  html_results.pl  make_daily_log.pl  notes.txt  parse_raw.pl  parse_results.pl  pbs_regtest_all  pbs_regtest_nightly  reap_results.pl  reaplib.pl  run_reg_tests.pl  run_reg_tests.sh  run_results.sh  test_reap.pl
streams/src/: Makefile  README
(+4622 files in other folders)
