dnl
dnl configure.in: StreamIt configuration script
dnl Process this file with 'autoconf' to produce a configure script.
dnl $Id: configure.in,v 1.3 2003-09-26 17:46:16 dmaze Exp $
dnl

AC_INIT([streamit], [0.0])

dnl checks for programs
dnl This needs an install-sh:
dnl AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_CC
AC_PATH_PROG(PERL, perl)
AC_PATH_PROG(PYTHON, python)
AC_PATH_PROG(JAVA, java)
AC_PATH_PROG(JAVAC, jikes)
AC_PATH_PROG(JIKES, jikes)
AC_PATH_PROG(LATEX, latex)
AC_PATH_PROG(BIBTEX, bibtex)
AC_PATH_PROG(DVIPS, dvips)
AC_PATH_PROG(MPOST, mpost)
AC_PATH_PROG(PS2PDF, ps2pdf)
AC_PATH_PROG(HEVEA, hevea)
AC_PATH_PROG(IMAGEN, imagen)
dnl Also consider checking for Java libraries (antlr).

dnl checks for libraries
HAVE_FFTW=1
AC_SUBST([HAVE_FFTW])
AC_CHECK_LIB(sfftw, fftw_create_plan, :, [HAVE_FFTW=0], [-lm])
AC_CHECK_LIB(srfftw, rfftw_create_plan, :, [HAVE_FFTW=0], [-lm -lsfftw])

dnl checks for header files
AC_CHECK_HEADER(sfftw.h, :, [HAVE_FFTW=0])
AC_CHECK_HEADER(srfftw.h, :, [HAVE_FFTW=0])

dnl checks for types
dnl checks for structures
dnl checks for compiler characteristics
dnl checks for library functions
dnl checks for system services

AC_CONFIG_FILES([knit Makefile library/c/Makefile misc/Makefile.vars])
AC_OUTPUT
